[package]
name = "mbrs_part"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
concolor-clap = "0.1.0"
mbrs = "0.2.4"
num-traits = "0.2.16"
rand = "0.8.5"
toml = "0.8.0"
